--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,188 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+main {
+  width: 90%;
+  justify-content: center;
+  align-items: center;
+}
+
+header {
+  display: flex; 
+  align-items: top; 
+  width:100vw;
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+.logo {
+  display: flex;
+  font-size: 1rem;
+}
+
+.logo-title {
+  margin-left: 1rem;
+}
+
+.logo-image {
+  margin-top: 5px;
+}
+
+nav {
+  display: flex; 
+  flex-direction: column;
+}
+
+.help-button {
+  color: white; 
+  border-radius: 50%; 
+  width: 2rem; 
+  height: 2rem;
+}
+
+.card {
+  width: 100%;
+  height: 15rem;
+}
+
+.card:hover {
+  transform: translateY(-3px);
+  transition: all ease 0.3s;
+}
+
+.carousel {
+  width: 75%;
+  height: 400px;
+  margin-bottom: 150px;
+}
+
+img {
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.carousel-item img{
+  height: 400px;
+}
+.card-text {
+  text-align: start;
+  font-size: 1rem;
+  height: 5rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.news-title {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.date {
+  font-size: 12px;
+  font-weight: 700;
+  margin-top: -5px;
+}
+
+.card img {
+  height: 9rem;
+  object-fit: cover;
+}
+
+.title {
+  text-align: center;
+}
+
+.news-grid {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  gap: 5px;
+}
+
+.list-left {
+  display: grid;
+  grid-template-columns: 66% 33%;
+  gap: 5px;
+}
+
+.list-right {
+  display: grid;
+  grid-template-columns: 33% 66%;
+  gap: 5px;
+}
+
+.pagination {
+  position: absolute;
+}
+
+.icon {
+  fill: white;
+}
+
+.icon:hover {
+  cursor: pointer;
+  transform: translateY(-5px);
+}
+
+.share {
+  fill: black;
+}
+
+.share:hover {
+  cursor: pointer;
+  transform: translateY(-5px);
+}
+
+.nav-item:hover {
+  transform: translateY(-5px);
+  transition: all ease 0.2s;
+}
+
+.photo {
+  height: 230px;
+}
+
+@media (max-width: 1000px){
+  .logo-title h2 {
+    font-size: 1.5rem;
   }
-  body {
-    color: white;
-    background: black;
+
+  .logo-title h7 {
+    font-size: 1rem;
+  }
+
+  .logo-image {
+    height: 4rem;
+    margin-top: 0.4rem;
+  }
+
+  header {
+    margin:0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .carousel {
+    width: 75%;
+    height: 200px;
+  }
+
+  .carousel-item img{
+    height: 200px;
+  }
+
+  .news-title {
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  main {
+    width: 100%;
+  }
+
+  .news-grid, .list-left, .list-right {
+    display: grid;
+    grid-template-columns: 100%;
+    gap: 5px;
   }
 }
